src/styles/styles.css
body {
  margin-left: calc(100vw - 100%);
  margin-right: 0;
  overflow-x: hidden;
}

body {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 2em;
}

body {
  color: var(--font-color-light);
  background: var(--background);
  font-family: var(--font-stack-sans);
  font-weight: 300;
}

a {
  color: var(--dusty-gray);
  font-weight: 500;
}

main {
  flex-grow: 1;
  font-size: 1.25em;
  line-height: 1.75;
  margin: auto;
  max-width: var(--wrap);
}

